--- a/index.html
+++ b/index.html
@@ -2,23 +2,56 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Gestión de Brigadas Eléctricas</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Gestión de Brigadas Eléctricas en Chile</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="sidebar">
-        <h2>Brigadas Disponibles</h2>
-        <ul id="brigade-list">
-            <!-- Lista de brigadas -->
-        </ul>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Sidebar -->
+            <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+                <div class="sidebar-sticky">
+                    <h5 class="sidebar-heading">Brigadas Disponibles</h5>
+                    <input type="text" id="search-input" class="form-control mb-3" placeholder="Buscar brigada...">
+                    <ul id="brigade-list" class="list-group">
+                        <!-- Lista de brigadas -->
+                    </ul>
+                </div>
+            </nav>
+            <!-- Main Content -->
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-0">
+                <div id="map"></div>
+                <!-- Panel de detalles -->
+                <div id="details-panel" class="card">
+                    <div class="card-header">
+                        <h5 id="brigade-name">Nombre de la Brigada</h5>
+                    </div>
+                    <div class="card-body">
+                        <p><strong>Velocidad:</strong> <span id="brigade-speed"></span></p>
+                        <p><strong>KPI:</strong> <span id="brigade-kpi"></span></p>
+                        <canvas id="kpi-chart" width="400" height="200"></canvas>
+                    </div>
+                </div>
+            </main>
+        </div>
     </div>
-    <div id="map"></div>
 
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <!-- Tu script personalizado -->
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
 </html>
