--- a/index.html
+++ b/index.html
@@ -7,8 +7,78 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        /* General styles */
+        body {
+            overflow: hidden;
+        }
+
+        #map {
+            height: 100vh;
+        }
+
+        .sidebar {
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            padding: 0;
+            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+            z-index: 1000;
+        }
+
+        .sidebar .sidebar-sticky {
+            position: relative;
+            top: 0;
+            height: calc(100vh - 0px);
+            padding-top: 20px;
+            overflow-x: hidden;
+            overflow-y: auto;
+        }
+
+        .sidebar-heading {
+            padding: 0.75rem 1rem;
+            font-size: 1.2rem;
+            text-align: center;
+        }
+
+        #brigade-list .list-group-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        #map {
+            margin-left: 250px; /* Width of the sidebar */
+        }
+
+        #details-panel {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            width: 350px;
+            display: none;
+            z-index: 1001;
+        }
+
+        @media (max-width: 768px) {
+            #map {
+                margin-left: 0;
+            }
+
+            .sidebar {
+                width: 100%;
+                height: auto;
+                position: relative;
+            }
+
+            #details-panel {
+                width: 90%;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -32,8 +102,11 @@
                         <h5 id="brigade-name">Nombre de la Brigada</h5>
                     </div>
                     <div class="card-body">
-                        <p><strong>Velocidad:</strong> <span id="brigade-speed"></span></p>
+                        <p><strong>Velocidad de traslado:</strong> <span id="brigade-speed"></span></p>
                         <p><strong>KPI:</strong> <span id="brigade-kpi"></span></p>
+                        <p><strong>OA Activada:</strong> <span id="brigade-oa"></span></p>
+                        <p><strong>Dentro de plazo según densidad:</strong> <span id="brigade-plazo"></span></p>
+                        <p><strong>Alertas/Notificaciones:</strong> <span id="brigade-alertas"></span></p>
                         <canvas id="kpi-chart" width="400" height="200"></canvas>
                     </div>
                 </div>
@@ -49,9 +122,328 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Custom JS -->
-    <script src="script.js"></script>
+    <script>
+        // Datos de ejemplo para las brigadas en Chile
+        const brigades = [
+            // Brigadas en Valdivia
+            {
+                id: 1,
+                name: "Brigada Valdivia 1",
+                coords: [-39.8196, -73.2452],
+                speed: 55,
+                kpi: 92,
+                oaActivada: "Sí",
+                plazo: "Dentro de plazo",
+                alertas: "Sin alertas",
+                kpiHistory: [88, 90, 91, 92, 92],
+                path: [
+                    [-39.8196, -73.2452],
+                    [-39.8296, -73.2552],
+                    [-39.8396, -73.2652],
+                    [-39.8496, -73.2752],
+                    [-39.8596, -73.2852]
+                ]
+            },
+            {
+                id: 2,
+                name: "Brigada Valdivia 2",
+                coords: [-39.8142, -73.2451],
+                speed: 60,
+                kpi: 89,
+                oaActivada: "No",
+                plazo: "Fuera de plazo",
+                alertas: "Retraso en llegada",
+                kpiHistory: [85, 86, 88, 89, 89],
+                path: [
+                    [-39.8142, -73.2451],
+                    [-39.8242, -73.2551],
+                    [-39.8342, -73.2651],
+                    [-39.8442, -73.2751],
+                    [-39.8542, -73.2851]
+                ]
+            },
+            {
+                id: 3,
+                name: "Brigada Valdivia 3",
+                coords: [-39.8088, -73.2450],
+                speed: 58,
+                kpi: 95,
+                oaActivada: "Sí",
+                plazo: "Dentro de plazo",
+                alertas: "Sin alertas",
+                kpiHistory: [90, 92, 94, 95, 95],
+                path: [
+                    [-39.8088, -73.2450],
+                    [-39.8188, -73.2550],
+                    [-39.8288, -73.2650],
+                    [-39.8388, -73.2750],
+                    [-39.8488, -73.2850]
+                ]
+            },
+            // Brigadas en Osorno
+            {
+                id: 4,
+                name: "Brigada Osorno 1",
+                coords: [-40.5741, -73.1144],
+                speed: 52,
+                kpi: 88,
+                oaActivada: "No",
+                plazo: "Dentro de plazo",
+                alertas: "Sin alertas",
+                kpiHistory: [82, 84, 86, 87, 88],
+                path: [
+                    [-40.5741, -73.1144],
+                    [-40.5841, -73.1244],
+                    [-40.5941, -73.1344],
+                    [-40.6041, -73.1444],
+                    [-40.6141, -73.1544]
+                ]
+            },
+            {
+                id: 5,
+                name: "Brigada Osorno 2",
+                coords: [-40.5690, -73.1120],
+                speed: 57,
+                kpi: 90,
+                oaActivada: "Sí",
+                plazo: "Dentro de plazo",
+                alertas: "Sin alertas",
+                kpiHistory: [85, 87, 88, 89, 90],
+                path: [
+                    [-40.5690, -73.1120],
+                    [-40.5790, -73.1220],
+                    [-40.5890, -73.1320],
+                    [-40.5990, -73.1420],
+                    [-40.6090, -73.1520]
+                ]
+            },
+            {
+                id: 6,
+                name: "Brigada Osorno 3",
+                coords: [-40.5639, -73.1096],
+                speed: 54,
+                kpi: 87,
+                oaActivada: "No",
+                plazo: "Fuera de plazo",
+                alertas: "Demora en respuesta",
+                kpiHistory: [80, 82, 84, 86, 87],
+                path: [
+                    [-40.5639, -73.1096],
+                    [-40.5739, -73.1196],
+                    [-40.5839, -73.1296],
+                    [-40.5939, -73.1396],
+                    [-40.6039, -73.1496]
+                ]
+            },
+            // Brigadas en Puerto Montt
+            {
+                id: 7,
+                name: "Brigada Puerto Montt 1",
+                coords: [-41.4689, -72.9411],
+                speed: 59,
+                kpi: 91,
+                oaActivada: "Sí",
+                plazo: "Dentro de plazo",
+                alertas: "Sin alertas",
+                kpiHistory: [86, 88, 89, 90, 91],
+                path: [
+                    [-41.4689, -72.9411],
+                    [-41.4789, -72.9511],
+                    [-41.4889, -72.9611],
+                    [-41.4989, -72.9711],
+                    [-41.5089, -72.9811]
+                ]
+            },
+            {
+                id: 8,
+                name: "Brigada Puerto Montt 2",
+                coords: [-41.4638, -72.9387],
+                speed: 56,
+                kpi: 89,
+                oaActivada: "No",
+                plazo: "Dentro de plazo",
+                alertas: "Sin alertas",
+                kpiHistory: [83, 85, 87, 88, 89],
+                path: [
+                    [-41.4638, -72.9387],
+                    [-41.4738, -72.9487],
+                    [-41.4838, -72.9587],
+                    [-41.4938, -72.9687],
+                    [-41.5038, -72.9787]
+                ]
+            },
+            {
+                id: 9,
+                name: "Brigada Puerto Montt 3",
+                coords: [-41.4587, -72.9363],
+                speed: 61,
+                kpi: 93,
+                oaActivada: "Sí",
+                plazo: "Fuera de plazo",
+                alertas: "Desvío de ruta",
+                kpiHistory: [88, 90, 91, 92, 93],
+                path: [
+                    [-41.4587, -72.9363],
+                    [-41.4687, -72.9463],
+                    [-41.4787, -72.9563],
+                    [-41.4887, -72.9663],
+                    [-41.4987, -72.9763]
+                ]
+            },
+        ];
+
+        // Inicializar el mapa centrado en la zona sur de Chile
+        const map = L.map('map').setView([-40.5, -73.0], 7);
+
+        // Añadir capa de mapa
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; OpenStreetMap contributors'
+        }).addTo(map);
+
+        // Referencia para los marcadores de brigadas en el mapa
+        const brigadeMarkers = {};
+
+        // Función para agregar brigada al mapa
+        function addBrigadeToMap(brigade) {
+            const customIcon = L.icon({
+                iconUrl: 'https://img.icons8.com/emoji/48/000000/electric-light-bulb-emoji.png',
+                iconSize: [32, 32],
+                iconAnchor: [16, 32],
+                popupAnchor: [0, -32],
+            });
+
+            const marker = L.marker(brigade.coords, { icon: customIcon }).addTo(map);
+
+            // Agregar indicadores al marcador
+            const popupContent = `
+                <strong>${brigade.name}</strong><br>
+                Velocidad: ${brigade.speed} km/h<br>
+                KPI: ${brigade.kpi}%
+            `;
+            marker.bindPopup(popupContent);
+
+            // Almacenar el marcador para futuras referencias
+            brigadeMarkers[brigade.id] = marker;
+
+            // Evento al hacer clic en el marcador
+            marker.on('click', function () {
+                showDetails(brigade);
+            });
+
+            // Simular movimiento en tiempo real
+            let index = 0;
+            setInterval(() => {
+                if (index < brigade.path.length) {
+                    marker.setLatLng(brigade.path[index]);
+                    index++;
+                } else {
+                    index = 0; // Reiniciar para que se repita
+                }
+            }, 2000); // Actualiza cada 2 segundos
+        }
+
+        // Función para agregar brigada desde la lista
+        function addBrigade(id) {
+            const brigade = brigades.find(b => b.id === id);
+            if (brigade) {
+                // Evitar agregar marcadores duplicados
+                if (!brigadeMarkers[brigade.id]) {
+                    addBrigadeToMap(brigade);
+                } else {
+                    alert("Esta brigada ya está en el mapa.");
+                }
+            }
+        }
+
+        // Cargar lista de brigadas
+        function loadBrigadeList() {
+            const listElement = document.getElementById('brigade-list');
+            brigades.forEach(brigade => {
+                const listItem = document.createElement('li');
+                listItem.className = 'list-group-item';
+
+                const nameSpan = document.createElement('span');
+                nameSpan.textContent = brigade.name;
+
+                const addButton = document.createElement('button');
+                addButton.textContent = "Agregar";
+                addButton.className = "btn btn-primary btn-sm";
+                addButton.onclick = () => addBrigade(brigade.id);
+
+                listItem.appendChild(nameSpan);
+                listItem.appendChild(addButton);
+                listElement.appendChild(listItem);
+            });
+        }
+
+        // Mostrar detalles de la brigada
+        function showDetails(brigade) {
+            document.getElementById('brigade-name').textContent = brigade.name;
+            document.getElementById('brigade-speed').textContent = brigade.speed + ' km/h';
+            document.getElementById('brigade-kpi').textContent = brigade.kpi + '%';
+            document.getElementById('brigade-oa').textContent = brigade.oaActivada;
+            document.getElementById('brigade-plazo').textContent = brigade.plazo;
+            document.getElementById('brigade-alertas').textContent = brigade.alertas;
+
+            // Mostrar el panel de detalles
+            document.getElementById('details-panel').style.display = 'block';
+
+            // Crear gráfico de KPI
+            createKpiChart(brigade.kpiHistory);
+
+            // Mostrar desplazamiento
+            const path = L.polyline(brigade.path, { color: 'blue' }).addTo(map);
+            // Zoom al área del desplazamiento
+            map.fitBounds(path.getBounds());
+        }
+
+        // Crear gráfico de KPI
+        function createKpiChart(data) {
+            const ctx = document.getElementById('kpi-chart').getContext('2d');
+            // Destruir el gráfico anterior si existe
+            if (window.kpiChart) {
+                window.kpiChart.destroy();
+            }
+            window.kpiChart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: ['Semana 1', 'Semana 2', 'Semana 3', 'Semana 4', 'Semana 5'],
+                    datasets: [{
+                        label: 'KPI',
+                        data: data,
+                        backgroundColor: 'rgba(0, 123, 255, 0.2)',
+                        borderColor: 'rgba(0, 123, 255, 1)',
+                        borderWidth: 2,
+                        pointRadius: 3,
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                }
+            });
+        }
+
+        // Filtrar brigadas
+        function filterBrigades() {
+            const query = document.getElementById('search-input').value.toLowerCase();
+            const listItems = document.querySelectorAll('#brigade-list .list-group-item');
+            listItems.forEach(item => {
+                const brigadeName = item.firstChild.textContent.toLowerCase();
+                if (brigadeName.includes(query)) {
+                    item.style.display = '';
+                } else {
+                    item.style.display = 'none';
+                }
+            });
+        }
+
+        // Evento de búsqueda
+        document.getElementById('search-input').addEventListener('input', filterBrigades);
+
+        // Inicializar la aplicación
+        loadBrigadeList();
+    </script>
 </body>
 </html>
