--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* General styles */
         body {
@@ -78,6 +76,24 @@
                 width: 90%;
             }
         }
+
+        /* Estilos para el KPI */
+        .kpi-value {
+            font-weight: bold;
+            color: green;
+        }
+
+        .kpi-low {
+            color: red;
+        }
+
+        .kpi-medium {
+            color: orange;
+        }
+
+        .kpi-high {
+            color: green;
+        }
     </style>
 </head>
 <body>
@@ -103,11 +119,10 @@
                     </div>
                     <div class="card-body">
                         <p><strong>Velocidad de traslado:</strong> <span id="brigade-speed"></span></p>
-                        <p><strong>KPI:</strong> <span id="brigade-kpi"></span></p>
+                        <p><strong>KPI:</strong> <span id="brigade-kpi" class="kpi-value"></span></p>
                         <p><strong>OA Activada:</strong> <span id="brigade-oa"></span></p>
                         <p><strong>Dentro de plazo según densidad:</strong> <span id="brigade-plazo"></span></p>
                         <p><strong>Alertas/Notificaciones:</strong> <span id="brigade-alertas"></span></p>
-                        <canvas id="kpi-chart" width="400" height="200"></canvas>
                     </div>
                 </div>
             </main>
@@ -115,7 +130,7 @@
     </div>
 
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <!-- Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <!-- Bootstrap JS -->
@@ -136,7 +151,6 @@
                 oaActivada: "Sí",
                 plazo: "Dentro de plazo",
                 alertas: "Sin alertas",
-                kpiHistory: [88, 90, 91, 92, 92],
                 path: [
                     [-39.8196, -73.2452],
                     [-39.8296, -73.2552],
@@ -150,11 +164,10 @@
                 name: "Brigada Valdivia 2",
                 coords: [-39.8142, -73.2451],
                 speed: 60,
-                kpi: 89,
+                kpi: 70,
                 oaActivada: "No",
                 plazo: "Fuera de plazo",
                 alertas: "Retraso en llegada",
-                kpiHistory: [85, 86, 88, 89, 89],
                 path: [
                     [-39.8142, -73.2451],
                     [-39.8242, -73.2551],
@@ -172,7 +185,6 @@
                 oaActivada: "Sí",
                 plazo: "Dentro de plazo",
                 alertas: "Sin alertas",
-                kpiHistory: [90, 92, 94, 95, 95],
                 path: [
                     [-39.8088, -73.2450],
                     [-39.8188, -73.2550],
@@ -191,7 +203,6 @@
                 oaActivada: "No",
                 plazo: "Dentro de plazo",
                 alertas: "Sin alertas",
-                kpiHistory: [82, 84, 86, 87, 88],
                 path: [
                     [-40.5741, -73.1144],
                     [-40.5841, -73.1244],
@@ -205,11 +216,10 @@
                 name: "Brigada Osorno 2",
                 coords: [-40.5690, -73.1120],
                 speed: 57,
-                kpi: 90,
+                kpi: 65,
                 oaActivada: "Sí",
                 plazo: "Dentro de plazo",
                 alertas: "Sin alertas",
-                kpiHistory: [85, 87, 88, 89, 90],
                 path: [
                     [-40.5690, -73.1120],
                     [-40.5790, -73.1220],
@@ -223,11 +233,10 @@
                 name: "Brigada Osorno 3",
                 coords: [-40.5639, -73.1096],
                 speed: 54,
-                kpi: 87,
+                kpi: 45,
                 oaActivada: "No",
                 plazo: "Fuera de plazo",
                 alertas: "Demora en respuesta",
-                kpiHistory: [80, 82, 84, 86, 87],
                 path: [
                     [-40.5639, -73.1096],
                     [-40.5739, -73.1196],
@@ -246,7 +255,6 @@
                 oaActivada: "Sí",
                 plazo: "Dentro de plazo",
                 alertas: "Sin alertas",
-                kpiHistory: [86, 88, 89, 90, 91],
                 path: [
                     [-41.4689, -72.9411],
                     [-41.4789, -72.9511],
@@ -260,11 +268,10 @@
                 name: "Brigada Puerto Montt 2",
                 coords: [-41.4638, -72.9387],
                 speed: 56,
-                kpi: 89,
+                kpi: 75,
                 oaActivada: "No",
                 plazo: "Dentro de plazo",
                 alertas: "Sin alertas",
-                kpiHistory: [83, 85, 87, 88, 89],
                 path: [
                     [-41.4638, -72.9387],
                     [-41.4738, -72.9487],
@@ -278,11 +285,10 @@
                 name: "Brigada Puerto Montt 3",
                 coords: [-41.4587, -72.9363],
                 speed: 61,
-                kpi: 93,
+                kpi: 30,
                 oaActivada: "Sí",
                 plazo: "Fuera de plazo",
                 alertas: "Desvío de ruta",
-                kpiHistory: [88, 90, 91, 92, 93],
                 path: [
                     [-41.4587, -72.9363],
                     [-41.4687, -72.9463],
@@ -304,10 +310,21 @@
         // Referencia para los marcadores de brigadas en el mapa
         const brigadeMarkers = {};
 
+        // Función para determinar el color del KPI
+        function getKpiColor(kpi) {
+            if (kpi >= 80) {
+                return 'kpi-high'; // Verde
+            } else if (kpi >= 50) {
+                return 'kpi-medium'; // Naranja
+            } else {
+                return 'kpi-low'; // Rojo
+            }
+        }
+
         // Función para agregar brigada al mapa
         function addBrigadeToMap(brigade) {
             const customIcon = L.icon({
-                iconUrl: 'https://img.icons8.com/emoji/48/000000/electric-light-bulb-emoji.png',
+                iconUrl: 'https://img.icons8.com/color/48/000000/electricity.png',
                 iconSize: [32, 32],
                 iconAnchor: [16, 32],
                 popupAnchor: [0, -32],
@@ -319,7 +336,7 @@
             const popupContent = `
                 <strong>${brigade.name}</strong><br>
                 Velocidad: ${brigade.speed} km/h<br>
-                KPI: ${brigade.kpi}%
+                KPI: <span class="${getKpiColor(brigade.kpi)}">${brigade.kpi}%</span>
             `;
             marker.bindPopup(popupContent);
 
@@ -381,7 +398,11 @@
         function showDetails(brigade) {
             document.getElementById('brigade-name').textContent = brigade.name;
             document.getElementById('brigade-speed').textContent = brigade.speed + ' km/h';
-            document.getElementById('brigade-kpi').textContent = brigade.kpi + '%';
+
+            const kpiElement = document.getElementById('brigade-kpi');
+            kpiElement.textContent = brigade.kpi + '%';
+            kpiElement.className = 'kpi-value ' + getKpiColor(brigade.kpi);
+
             document.getElementById('brigade-oa').textContent = brigade.oaActivada;
             document.getElementById('brigade-plazo').textContent = brigade.plazo;
             document.getElementById('brigade-alertas').textContent = brigade.alertas;
@@ -389,40 +410,10 @@
             // Mostrar el panel de detalles
             document.getElementById('details-panel').style.display = 'block';
 
-            // Crear gráfico de KPI
-            createKpiChart(brigade.kpiHistory);
-
             // Mostrar desplazamiento
             const path = L.polyline(brigade.path, { color: 'blue' }).addTo(map);
             // Zoom al área del desplazamiento
             map.fitBounds(path.getBounds());
-        }
-
-        // Crear gráfico de KPI
-        function createKpiChart(data) {
-            const ctx = document.getElementById('kpi-chart').getContext('2d');
-            // Destruir el gráfico anterior si existe
-            if (window.kpiChart) {
-                window.kpiChart.destroy();
-            }
-            window.kpiChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: ['Semana 1', 'Semana 2', 'Semana 3', 'Semana 4', 'Semana 5'],
-                    datasets: [{
-                        label: 'KPI',
-                        data: data,
-                        backgroundColor: 'rgba(0, 123, 255, 0.2)',
-                        borderColor: 'rgba(0, 123, 255, 1)',
-                        borderWidth: 2,
-                        pointRadius: 3,
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: false,
-                }
-            });
         }
 
         // Filtrar brigadas
@@ -445,5 +436,8 @@
         // Inicializar la aplicación
         loadBrigadeList();
     </script>
+</body>
+</html>
+
 </body>
 </html>
