--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
             top: 0;
             bottom: 0;
             left: 0;
+            width: 250px;
             padding: 0;
             box-shadow: 2px 0 5px rgba(0,0,0,0.1);
             z-index: 1000;
+            background-color: #f8f9fa;
         }
 
         .sidebar .sidebar-sticky {
             position: relative;
             top: 0;
-            height: calc(100vh - 0px);
+            height: 100vh;
             padding-top: 20px;
             overflow-x: hidden;
             overflow-y: auto;
@@ -71,28 +73,15 @@
             width: 350px;
             display: none;
             z-index: 1001;
+            transition: all 0.3s ease-in-out;
         }
 
-        @media (max-width: 768px) {
-            #map {
-                margin-left: 0;
-            }
-
-            .sidebar {
-                width: 100%;
-                height: auto;
-                position: relative;
-            }
-
-            #details-panel {
-                width: 90%;
-            }
+        #details-panel.active {
+            display: block;
         }
 
-        /* Estilos para el KPI */
         .kpi-value {
             font-weight: bold;
-            color: green;
         }
 
         .kpi-low {
@@ -112,22 +101,21 @@
     <div class="container-fluid">
         <div class="row">
             <!-- Sidebar -->
-            <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+            <nav id="sidebar" class="sidebar">
                 <div class="sidebar-sticky">
                     <h5 class="sidebar-heading">Brigadas Disponibles</h5>
                     <input type="text" id="search-input" class="form-control mb-3" placeholder="Buscar brigada...">
-                    <ul id="brigade-list" class="list-group">
-                        <!-- Lista de brigadas -->
-                    </ul>
+                    <ul id="brigade-list" class="list-group"></ul>
                 </div>
             </nav>
             <!-- Main Content -->
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-0">
+            <main role="main" id="main-content">
                 <div id="map"></div>
                 <!-- Panel de detalles -->
                 <div id="details-panel" class="card">
                     <div class="card-header">
                         <h5 id="brigade-name">Nombre de la Brigada</h5>
+                        <button id="close-details" class="btn btn-sm btn-danger float-right">X</button>
                     </div>
                     <div class="card-body">
                         <p><strong>Estado:</strong> <span id="brigade-status"></span></p>
@@ -136,25 +124,22 @@
                         <p><strong>OA Activada:</strong> <span id="brigade-oa"></span></p>
                         <p><strong>Dentro de plazo según densidad:</strong> <span id="brigade-plazo"></span></p>
                         <p><strong>Alertas/Notificaciones:</strong> <span id="brigade-alertas"></span></p>
+                        <button class="btn btn-danger btn-sm mt-2" id="remove-brigade">Eliminar del Mapa</button>
                     </div>
                 </div>
             </main>
         </div>
     </div>
 
-    <!-- Bootstrap JS and dependencies -->
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-    <!-- Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <!-- Custom JS -->
     <script>
-        // Datos de ejemplo para las brigadas en Chile
+        // Datos de brigadas
         const brigades = [
-            // Brigadas en Valdivia
+            // Aquí se mantiene la estructura original de las brigadas
             {
                 id: 1,
                 name: "Brigada Valdivia 1",
@@ -165,316 +150,83 @@
                 oaActivada: "Sí",
                 plazo: "Dentro de plazo",
                 alertas: "Sin alertas",
-                path: [
-                    [-39.8196, -73.2452],
-                    [-39.8296, -73.2552],
-                    [-39.8396, -73.2652],
-                    [-39.8496, -73.2752],
-                    [-39.8596, -73.2852]
-                ]
+                path: [[-39.8196, -73.2452], [-39.8296, -73.2552]]
             },
-            {
-                id: 2,
-                name: "Brigada Valdivia 2",
-                coords: [-39.8142, -73.2451],
-                speed: 60,
-                kpi: 70,
-                estado: "Trabajando en el lugar",
-                oaActivada: "No",
-                plazo: "Fuera de plazo",
-                alertas: "Retraso en llegada",
-                path: [
-                    [-39.8142, -73.2451],
-                    [-39.8242, -73.2551],
-                    [-39.8342, -73.2651],
-                    [-39.8442, -73.2751],
-                    [-39.8542, -73.2851]
-                ]
-            },
-            {
-                id: 3,
-                name: "Brigada Valdivia 3",
-                coords: [-39.8088, -73.2450],
-                speed: 58,
-                kpi: 95,
-                estado: "En colación",
-                oaActivada: "Sí",
-                plazo: "Dentro de plazo",
-                alertas: "Sin alertas",
-                path: [
-                    [-39.8088, -73.2450],
-                    [-39.8188, -73.2550],
-                    [-39.8288, -73.2650],
-                    [-39.8388, -73.2750],
-                    [-39.8488, -73.2850]
-                ]
-            },
-            // Brigadas en Osorno
-            {
-                id: 4,
-                name: "Brigada Osorno 1",
-                coords: [-40.5741, -73.1144],
-                speed: 52,
-                kpi: 88,
-                estado: "En traslado",
-                oaActivada: "No",
-                plazo: "Dentro de plazo",
-                alertas: "Sin alertas",
-                path: [
-                    [-40.5741, -73.1144],
-                    [-40.5841, -73.1244],
-                    [-40.5941, -73.1344],
-                    [-40.6041, -73.1444],
-                    [-40.6141, -73.1544]
-                ]
-            },
-            {
-                id: 5,
-                name: "Brigada Osorno 2",
-                coords: [-40.5690, -73.1120],
-                speed: 57,
-                kpi: 65,
-                estado: "Trabajando en el lugar",
-                oaActivada: "Sí",
-                plazo: "Dentro de plazo",
-                alertas: "Sin alertas",
-                path: [
-                    [-40.5690, -73.1120],
-                    [-40.5790, -73.1220],
-                    [-40.5890, -73.1320],
-                    [-40.5990, -73.1420],
-                    [-40.6090, -73.1520]
-                ]
-            },
-            {
-                id: 6,
-                name: "Brigada Osorno 3",
-                coords: [-40.5639, -73.1096],
-                speed: 54,
-                kpi: 45,
-                estado: "En colación",
-                oaActivada: "No",
-                plazo: "Fuera de plazo",
-                alertas: "Demora en respuesta",
-                path: [
-                    [-40.5639, -73.1096],
-                    [-40.5739, -73.1196],
-                    [-40.5839, -73.1296],
-                    [-40.5939, -73.1396],
-                    [-40.6039, -73.1496]
-                ]
-            },
-            // Brigadas en Puerto Montt
-            {
-                id: 7,
-                name: "Brigada Puerto Montt 1",
-                coords: [-41.4689, -72.9411],
-                speed: 59,
-                kpi: 91,
-                estado: "En traslado",
-                oaActivada: "Sí",
-                plazo: "Dentro de plazo",
-                alertas: "Sin alertas",
-                path: [
-                    [-41.4689, -72.9411],
-                    [-41.4789, -72.9511],
-                    [-41.4889, -72.9611],
-                    [-41.4989, -72.9711],
-                    [-41.5089, -72.9811]
-                ]
-            },
-            {
-                id: 8,
-                name: "Brigada Puerto Montt 2",
-                coords: [-41.4638, -72.9387],
-                speed: 56,
-                kpi: 75,
-                estado: "Trabajando en el lugar",
-                oaActivada: "No",
-                plazo: "Dentro de plazo",
-                alertas: "Sin alertas",
-                path: [
-                    [-41.4638, -72.9387],
-                    [-41.4738, -72.9487],
-                    [-41.4838, -72.9587],
-                    [-41.4938, -72.9687],
-                    [-41.5038, -72.9787]
-                ]
-            },
-            {
-                id: 9,
-                name: "Brigada Puerto Montt 3",
-                coords: [-41.4587, -72.9363],
-                speed: 61,
-                kpi: 30,
-                estado: "En colación",
-                oaActivada: "Sí",
-                plazo: "Fuera de plazo",
-                alertas: "Desvío de ruta",
-                path: [
-                    [-41.4587, -72.9363],
-                    [-41.4687, -72.9463],
-                    [-41.4787, -72.9563],
-                    [-41.4887, -72.9663],
-                    [-41.4987, -72.9763]
-                ]
-            },
+            // Agrega más brigadas aquí...
         ];
 
-        // Inicializar el mapa centrado en la zona sur de Chile
         const map = L.map('map').setView([-40.5, -73.0], 7);
 
-        // Añadir capa de mapa
+        // Cargar mapa base
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
-        // Referencia para los marcadores de brigadas en el mapa
         const brigadeMarkers = {};
 
-        // Función para determinar el color del KPI
         function getKpiColor(kpi) {
-            if (kpi >= 80) {
-                return 'kpi-high'; // Verde
-            } else if (kpi >= 50) {
-                return 'kpi-medium'; // Naranja
-            } else {
-                return 'kpi-low'; // Rojo
-            }
+            if (kpi >= 80) return 'kpi-high';
+            if (kpi >= 50) return 'kpi-medium';
+            return 'kpi-low';
         }
 
-        // Función para agregar brigada al mapa
         function addBrigadeToMap(brigade) {
-            const customIcon = L.icon({
-                iconUrl: 'https://img.icons8.com/color/48/000000/electricity.png',
-                iconSize: [32, 32],
-                iconAnchor: [16, 32],
-                popupAnchor: [0, -32],
-            });
+            const marker = L.marker(brigade.coords).addTo(map);
+            marker.bindPopup(`<strong>${brigade.name}</strong>`);
 
-            const marker = L.marker(brigade.coords, { icon: customIcon }).addTo(map);
-
-            // Agregar indicadores al marcador
-            const popupContent = `
-                <strong>${brigade.name}</strong><br>
-                Estado: ${brigade.estado}<br>
-                Velocidad: ${brigade.speed} km/h<br>
-                KPI: <span class="${getKpiColor(brigade.kpi)}">${brigade.kpi}%</span>
-            `;
-            marker.bindPopup(popupContent);
-
-            // Almacenar el marcador para futuras referencias
+            marker.on('click', () => showDetails(brigade));
             brigadeMarkers[brigade.id] = marker;
+        }
 
-            // Evento al hacer clic en el marcador
-            marker.on('click', function () {
-                showDetails(brigade);
-            });
+        function showDetails(brigade) {
+            document.getElementById('brigade-name').textContent = brigade.name;
+            document.getElementById('brigade-status').textContent = brigade.estado;
+            document.getElementById('brigade-speed').textContent = brigade.speed + ' km/h';
+            const kpiElement = document.getElementById('brigade-kpi');
+            kpiElement.textContent = brigade.kpi + '%';
+            kpiElement.className = 'kpi-value ' + getKpiColor(brigade.kpi);
+            document.getElementById('brigade-oa').textContent = brigade.oaActivada;
+            document.getElementById('brigade-plazo').textContent = brigade.plazo;
+            document.getElementById('brigade-alertas').textContent = brigade.alertas;
 
-            // Simular movimiento en tiempo real si está en traslado
-            if (brigade.estado === "En traslado") {
-                let index = 0;
-                setInterval(() => {
-                    if (index < brigade.path.length) {
-                        marker.setLatLng(brigade.path[index]);
-                        index++;
-                    } else {
-                        index = 0; // Reiniciar para que se repita
-                    }
-                }, 2000); // Actualiza cada 2 segundos
+            const panel = document.getElementById('details-panel');
+            panel.classList.add('active');
+
+            const removeButton = document.getElementById('remove-brigade');
+            removeButton.onclick = () => removeBrigade(brigade.id);
+        }
+
+        function removeBrigade(id) {
+            if (brigadeMarkers[id]) {
+                map.removeLayer(brigadeMarkers[id]);
+                delete brigadeMarkers[id];
+                document.getElementById('details-panel').classList.remove('active');
             }
         }
 
-        // Función para agregar brigada desde la lista
-        function addBrigade(id) {
-            const brigade = brigades.find(b => b.id === id);
-            if (brigade) {
-                // Evitar agregar marcadores duplicados
-                if (!brigadeMarkers[brigade.id]) {
-                    addBrigadeToMap(brigade);
-                } else {
-                    alert("Esta brigada ya está en el mapa.");
-                }
-            }
-        }
+        document.getElementById('close-details').addEventListener('click', () => {
+            document.getElementById('details-panel').classList.remove('active');
+        });
 
-        // Cargar lista de brigadas
         function loadBrigadeList() {
             const listElement = document.getElementById('brigade-list');
             brigades.forEach(brigade => {
                 const listItem = document.createElement('li');
                 listItem.className = 'list-group-item';
-
-                const headerDiv = document.createElement('div');
-                headerDiv.className = 'brigade-header';
-
-                const nameSpan = document.createElement('span');
-                nameSpan.textContent = brigade.name;
-
-                const addButton = document.createElement('button');
-                addButton.textContent = "Agregar";
-                addButton.className = "btn btn-primary btn-sm";
-                addButton.onclick = () => addBrigade(brigade.id);
-
-                headerDiv.appendChild(nameSpan);
-                headerDiv.appendChild(addButton);
-
-                const statusSpan = document.createElement('span');
-                statusSpan.textContent = `Estado: ${brigade.estado}`;
-                statusSpan.className = 'brigade-status';
-
-                listItem.appendChild(headerDiv);
-                listItem.appendChild(statusSpan);
+                listItem.innerHTML = `
+                    <div class="brigade-header">
+                        <span>${brigade.name}</span>
+                        <button class="btn btn-primary btn-sm">Agregar</button>
+                    </div>
+                    <span class="brigade-status">Estado: ${brigade.estado}</span>
+                `;
+                listItem.querySelector('button').onclick = () => addBrigadeToMap(brigade);
                 listElement.appendChild(listItem);
             });
         }
 
-        // Mostrar detalles de la brigada
-        function showDetails(brigade) {
-            document.getElementById('brigade-name').textContent = brigade.name;
-            document.getElementById('brigade-status').textContent = brigade.estado;
-            document.getElementById('brigade-speed').textContent = brigade.speed + ' km/h';
-
-            const kpiElement = document.getElementById('brigade-kpi');
-            kpiElement.textContent = brigade.kpi + '%';
-            kpiElement.className = 'kpi-value ' + getKpiColor(brigade.kpi);
-
-            document.getElementById('brigade-oa').textContent = brigade.oaActivada;
-            document.getElementById('brigade-plazo').textContent = brigade.plazo;
-            document.getElementById('brigade-alertas').textContent = brigade.alertas;
-
-            // Mostrar el panel de detalles
-            document.getElementById('details-panel').style.display = 'block';
-
-            // Mostrar desplazamiento si está en traslado
-            if (brigade.estado === "En traslado") {
-                const path = L.polyline(brigade.path, { color: 'blue' }).addTo(map);
-                // Zoom al área del desplazamiento
-                map.fitBounds(path.getBounds());
-            } else {
-                map.setView(brigade.coords, 13);
-            }
-        }
-
-        // Filtrar brigadas
-        function filterBrigades() {
-            const query = document.getElementById('search-input').value.toLowerCase();
-            const listItems = document.querySelectorAll('#brigade-list .list-group-item');
-            listItems.forEach(item => {
-                const brigadeName = item.querySelector('.brigade-header span').textContent.toLowerCase();
-                if (brigadeName.includes(query)) {
-                    item.style.display = '';
-                } else {
-                    item.style.display = 'none';
-                }
-            });
-        }
-
-        // Evento de búsqueda
-        document.getElementById('search-input').addEventListener('input', filterBrigades);
-
-        // Inicializar la aplicación
         loadBrigadeList();
     </script>
 </body>
 </html>
+
